--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,8 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
+	<classpathentry kind="lib" path="libs/tagsoup-1.2.1.jar"/>
+	<classpathentry kind="lib" path="/Users/earl/Dropbox/Workspace/MediaLabPttDownload/libs/jsoup-1.6.3-javadoc.jar"/>
+	<classpathentry kind="lib" path="/Users/earl/Dropbox/Workspace/MediaLabPttDownload/libs/jsoup-1.6.3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
